--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 phone: "50687090777"
             },
   	    {
-                category: { en: "Peronal care", es: "Cuidado personal" },
+                category: { en: "Personal care", es: "Cuidado personal" },
                 subcategory: { en: "Hygiene", es: "Higiene" },
                 product: { en: "Soap", es: "Jabón" },
                 name: "Hannah",
@@ -341,4 +341,5 @@
 </body>
 </html>
 </html>
+
 
