--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 category: { en: "Services", es: "Servicios" },
                 subcategory: { en: "Sewing", es: "Costura" },
                 product: { en: "Clothing & Repairs", es: "Ropa y Reparaciones" },
-                name: "Catie",
+                name: "Catia",
                 phone: "50688752424"
             },
 	    {
@@ -232,6 +232,13 @@
                 product: { en: "Bicycles & Motorcycles", es: "Bici y moto" },
                 name: "Jose",
                 phone: "50689353561"
+            },
+			{
+                category: { en: "Services", es: "Servicios" },
+                subcategory: { en: "Cleaning", es: "Limpieza" },
+                product: { en: "Washing of Vehicles", es: "Lavado de vehículos" },
+                name: "Josuè",
+                phone: "50686462590"
             },
   	    {
                 category: { en: "Handmade crafts", es: "Artesanías" },
@@ -341,5 +348,6 @@
 </body>
 </html>
 </html>
+
 
 
