--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
         const translations = {
             en: {
                 title: "El Castillo Vendors",
-                subtitle: "Buy locally",
+                subtitle: "Where does your money go? 
+El Castillo was built by the hands that live and dream here. Every local business is a piece of someone's soul. 
+Your money matters, a lot. Depending on where you spend it. When you shop at a chain store, most of it leaves immediately. To corporate offices, shareholders, distant banks. But when you shop at a local business, your money stays right here. It pays bakers, chees makers, cashiers, helps entrepreneurs cover their rent. Keeps our town's businesses open. That money circulates from hand to hand, strengthening the entire community.",
                 allCategories: "All Categories",
                 allSubcategories: "All Subcategories",
                 vendors: "vendors",
@@ -167,10 +169,7 @@
 El Castillo fue construido por los manos que viven y sueñan aquí. 
 Cada negocio local es un pedazo del alma de alguien. 
 Tu dinero importa, y mucho. Dependiendo de dónde lo gastes. 
-Cuando compras en una cadena, la mayor parte se va inmediato. 
-	A oficinas corporativas, accionistas, a bancos lejanos. Pero cuando compras en un negocio local, su dinero se queda aquí mismo. 
-	Paga al cajero de la panadería, ayuda a los emprendedores a cubrir la renta, mantiene abierto los negocios del pueblo. 
-	Ese dinero circula de mano en mano fortaleciendo a toda la comunidad.",
+Cuando compras en una cadena, la mayor parte se va inmediato. A oficinas corporativas, accionistas, a bancos lejanos. Pero cuando compras en un negocio local, su dinero se queda aquí mismo. Paga al cajero de la panadería, ayuda a los emprendedores a cubrir la renta, mantiene abierto los negocios del pueblo. Ese dinero circula de mano en mano fortaleciendo a toda la comunidad.",
                 allCategories: "Todas las Categorías",
                 allSubcategories: "Todas las Subcategorías",
                 vendors: "vendedores",
@@ -184,126 +183,126 @@ Cuando compras en una cadena, la mayor parte se va inmediato.
                 subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
                 product: { en: "Milk", es: "Leche" },
                 name: "Reina",
-                phone: "50683652239"
+                phone: "+506 83652239"
             },
 			{
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
                 product: { en: "Cheese", es: "Queso" },
                 name: "Reina",
-                phone: "50683652239"
+                phone: "+506 83652239"
             },
  	    {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
                 product: { en: "Yoghurt", es: "Yogurt" },
                 name: "Anna",
-                phone: "50687286113"
+                phone: "+506 87286113"
             },
   	    {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Beverages", es: "Bebidas" },
                 product: { en: "Local Wine Chicha", es: "Chicha" },
                 name: "Tomas",
-                phone: "50685337902"
+                phone: "+506 85337902"
             },
 			 {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Beverages", es: "Bebidas" },
                 product: { en: "Organic tea", es: "Tes orgánicos" },
                 name: "Lena",
-                phone: "50683261696"
+                phone: "+506 83261696"
             },
   	    {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Meat & Poultry", es: "Carnes y Aves" },
                 product: { en: "Chicken & Chicken dinners", es: "Pollo y Cena con pollo" },
                 name: "Ana",
-                phone: "50688624019"
+                phone: "+506 88624019"
             },
 			{
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
                 product: { en: "Eggs", es: "Huevos" },
                 name: "Lena",
-                phone: "50683261696"
+                phone: "+506 83261696"
             },
 			{
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Baked goods", es: "Repostería" },
                 product: { en: "Sweet cakes", es: "Pasteles dulces" },
                 name: "Mayra",
-                phone: "50688385364"
+                phone: "+506 88385364"
             },
 			{
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Produce", es: "Productos frescos" },
                 product: { en: "Oyster mushrooms", es: "Hongos tipo Ostra" },
                 name: "Michael",
-                phone: "50687090777"
+                phone: "+506 87090777"
             },
   	    {
                 category: { en: "Personal care", es: "Cuidado personal" },
                 subcategory: { en: "Hygiene", es: "Higiene" },
                 product: { en: "Soap", es: "Jabón" },
                 name: "Hannah",
-                phone: "50688763750"
+                phone: "+506 88763750"
             },
 			{
                 category: { en: "Personal care", es: "Cuidado personal" },
                 subcategory: { en: "Natural remedies", es: "Remedios Naturales" },
                 product: { en: "Insect repellent", es: "Repelentes naturales" },
                 name: "Lena",
-                phone: "50683261696"
+                phone: "+506 83261696"
             },
 			{
                 category: { en: "Personal care", es: "Cuidado personal" },
                 subcategory: { en: "Hygiene", es: "Higiene" },
                 product: { en: "Toothpaste", es: "Pasta de dientes" },
                 name: "Lena",
-                phone: "50683261696"
+                phone: "+506 83261696"
             },
   	    {
                 category: { en: "Services", es: "Servicios" },
                 subcategory: { en: "Sewing", es: "Costura" },
                 product: { en: "Clothing & Repairs", es: "Ropa y Reparaciones" },
                 name: "Catia",
-                phone: "50688752424"
+                phone: "+506 88752424"
             },
 	    {
                 category: { en: "Services", es: "Servicios" },
                 subcategory: { en: "Mechanic", es: "Mecánico" },
-                product: { en: "Vehicles", es: "Vehículos" },
+                product: { en: "Vehicle repair", es: "Reparación de vehículos" },
                 name: "Eduardo",
-                phone: "50689275198"
+                phone: "+506 89275198"
             },
  	    {
                 category: { en: "Services", es: "Servicios" },
                 subcategory: { en: "Mechanic", es: "Mecánico" },
-                product: { en: "Bicycles & Motorcycles", es: "Bici y moto" },
+                product: { en: "Bicycle & Motorcycle repair", es: "Reparación de bici y moto" },
                 name: "Jose",
-                phone: "50689353561"
+                phone: "+506 89353561"
             },
 			{
                 category: { en: "Services", es: "Servicios" },
                 subcategory: { en: "Cleaning", es: "Limpieza" },
                 product: { en: "Washing of Vehicles", es: "Lavado de vehículos" },
                 name: "Josuè",
-                phone: "50686462590"
+                phone: "+506 86462590"
             },
   	    {
                 category: { en: "Handmade crafts", es: "Artesanías" },
                 subcategory: { en: "Jewelry", es: "Joyas" },
                 product: { en: "Rings from cutlery", es: "Anillos de cubiertos" },
                 name: "Matthijs",
-                phone: "31624489089"
+                phone: "+316 24489089"
             },
   	    {
                 category: { en: "Handmade crafts", es: "Artesanías" },
                 subcategory: { en: "Jewelry", es: "Joyas" },
                 product: { en: "Rope bracelets & Necklaces", es: "Pulseras y Collares de soga" },
                 name: "Yuritza",
-                phone: "50585640092"
+                phone: "+505 85640092"
             }
         ];
 
@@ -408,3 +407,4 @@ Cuando compras en una cadena, la mayor parte se va inmediato.
     </script>
 </body>
 </html>
+
