--- a/index.html
+++ b/index.html
@@ -177,126 +177,126 @@
                 subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
                 product: { en: "Milk", es: "Leche" },
                 name: "Reina",
-                phone: "+506 83652239"
+                phone: "+506 8365 2239"
             },
 			{
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
                 product: { en: "Cheese", es: "Queso" },
                 name: "Reina",
-                phone: "+506 83652239"
+                phone: "+506 8365 2239"
             },
  	    {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
                 product: { en: "Yoghurt", es: "Yogurt" },
                 name: "Anna",
-                phone: "+506 87286113"
+                phone: "+506 8728 6113"
             },
   	    {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Beverages", es: "Bebidas" },
                 product: { en: "Local Wine Chicha", es: "Chicha" },
                 name: "Tomas",
-                phone: "+506 85337902"
+                phone: "+506 8533 7902"
             },
 			 {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Beverages", es: "Bebidas" },
                 product: { en: "Organic tea", es: "Tes orgánicos" },
                 name: "Lena",
-                phone: "+506 83261696"
+                phone: "+506 8326 1696"
             },
   	    {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Meat & Poultry", es: "Carnes y Aves" },
                 product: { en: "Chicken & Chicken dinners", es: "Pollo y Cena con pollo" },
                 name: "Ana",
-                phone: "+506 88624019"
+                phone: "+506 8862 4019"
             },
 			{
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
                 product: { en: "Eggs", es: "Huevos" },
                 name: "Lena",
-                phone: "+506 83261696"
+                phone: "+506 8326 1696"
             },
 			{
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Baked goods", es: "Repostería" },
                 product: { en: "Sweet cakes", es: "Pasteles dulces" },
                 name: "Mayra",
-                phone: "+506 88385364"
+                phone: "+506 8838 5364"
             },
 			{
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Produce", es: "Productos frescos" },
                 product: { en: "Oyster mushrooms", es: "Hongos tipo Ostra" },
                 name: "Michael",
-                phone: "+506 87090777"
+                phone: "+506 8709 0777"
             },
   	    {
                 category: { en: "Personal care", es: "Cuidado personal" },
                 subcategory: { en: "Hygiene", es: "Higiene" },
                 product: { en: "Soap", es: "Jabón" },
                 name: "Hannah",
-                phone: "+506 88763750"
+                phone: "+506 8876 3750"
             },
 			{
                 category: { en: "Personal care", es: "Cuidado personal" },
                 subcategory: { en: "Natural remedies", es: "Remedios Naturales" },
                 product: { en: "Insect repellent", es: "Repelentes naturales" },
                 name: "Lena",
-                phone: "+506 83261696"
+                phone: "+506 8326 1696"
             },
 			{
                 category: { en: "Personal care", es: "Cuidado personal" },
                 subcategory: { en: "Hygiene", es: "Higiene" },
                 product: { en: "Toothpaste", es: "Pasta de dientes" },
                 name: "Lena",
-                phone: "+506 83261696"
+                phone: "+506 8326 1696"
             },
   	    {
                 category: { en: "Services", es: "Servicios" },
                 subcategory: { en: "Sewing", es: "Costura" },
                 product: { en: "Clothing & Repairs", es: "Ropa y Reparaciones" },
                 name: "Catia",
-                phone: "+506 88752424"
+                phone: "+506 8875 2424"
             },
 	    {
                 category: { en: "Services", es: "Servicios" },
                 subcategory: { en: "Mechanic", es: "Mecánico" },
                 product: { en: "Vehicle repair", es: "Reparación de vehículos" },
                 name: "Eduardo",
-                phone: "+506 89275198"
+                phone: "+506 8927 5198"
             },
  	    {
                 category: { en: "Services", es: "Servicios" },
                 subcategory: { en: "Mechanic", es: "Mecánico" },
                 product: { en: "Bicycle & Motorcycle repair", es: "Reparación de bici y moto" },
                 name: "Jose",
-                phone: "+506 89353561"
+                phone: "+506 8935 3561"
             },
 			{
                 category: { en: "Services", es: "Servicios" },
                 subcategory: { en: "Cleaning", es: "Limpieza" },
                 product: { en: "Washing of Vehicles", es: "Lavado de vehículos" },
                 name: "Josuè",
-                phone: "+506 86462590"
+                phone: "+506 8646 2590"
             },
   	    {
                 category: { en: "Handmade crafts", es: "Artesanías" },
                 subcategory: { en: "Jewelry", es: "Joyas" },
                 product: { en: "Rings from cutlery", es: "Anillos de cubiertos" },
                 name: "Matthijs",
-                phone: "+316 24489089"
+                phone: "+316 2448 9089"
             },
   	    {
                 category: { en: "Handmade crafts", es: "Artesanías" },
                 subcategory: { en: "Jewelry", es: "Joyas" },
                 product: { en: "Rope bracelets & Necklaces", es: "Pulseras y Collares de soga" },
                 name: "Yuritza",
-                phone: "+505 85640092"
+                phone: "+505 8564 0092"
             }
         ];
 
@@ -401,5 +401,6 @@
     </script>
 </body>
 </html>
+
 
 
