--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         const translations = {
             en: {
                 title: "El Castillo Vendors",
-                subtitle: "Buy locally",
+                subtitle: "Where does your money go? El Castillo was built by the hands that live and dream here. Every local business is a piece of someone's soul. Your money matters, a lot. Depending on where you spend it. When you shop at a chain store, most of it leaves immediately. To corporate offices, shareholders, distant banks. But when you shop at a local business, your money stays right here. It pays bakers, chees makers, cashiers, helps entrepreneurs cover their rent. Keeps our town's businesses open. That money circulates from hand to hand, strengthening the entire community.",
                 allCategories: "All Categories",
                 allSubcategories: "All Subcategories",
                 vendors: "vendors",
@@ -177,7 +177,7 @@
             },
             es: {
                 title: "Vendedores del Castillo",
-                subtitle: "Compra local",
+                subtitle: "A dónde va tu dinero? El Castillo fue construido por los manos que viven y sueñan aquí. Cada negocio local es un pedazo del alma de alguien. Tu dinero importa, y mucho. Dependiendo de dónde lo gastes. Cuando compras en una cadena, la mayor parte se va inmediato. A oficinas corporativas, accionistas, a bancos lejanos. Pero cuando compras en un negocio local, su dinero se queda aquí mismo. Paga al cajero de la panadería, ayuda a los emprendedores a cubrir la renta, mantiene abierto los negocios del pueblo. Ese dinero circula de mano en mano fortaleciendo a toda la comunidad.",
                 allCategories: "Todas las Categorías",
                 allSubcategories: "Todas las Subcategorías",
                 vendors: "vendedores",
@@ -416,5 +416,6 @@
     </script>
 </body>
 </html>
+
 
 
