--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
         }
         
         .subtitle-text {
-            text-align: justify;
-            max-width: 800px;
-            margin: 0 auto;
-        }
+    text-align: justify;
+    text-justify: inter-word;
+    max-width: 800px;
+    margin: 0 auto;
+    hyphens: auto;
+}
         
         .filters {
             background: white;
@@ -418,3 +420,4 @@
     </script>
 </body>
 </html>
+
