--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Castillo Vendors</title>
+    <title>Crafted in El Castillo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -141,7 +141,7 @@
     </style>
 </head>
 <body>
-    <h1 id="title">El Castillo Vendors</h1>
+    <h1 id="title">Crafted in El Castillo</h1>
     <div class="subtitle">
         <div class="subtitle-title" id="subtitleTitle"></div>
         <div class="subtitle-text" id="subtitleText"></div>
@@ -170,7 +170,7 @@
 
         const translations = {
             en: {
-                title: "El Castillo Vendors",
+                title: "Crafted in El Castillo",
                 subtitleTitle: "Where does your money go?",
                 subtitleText: "El Castillo was built by the hands that live and dream here. Every local business is a piece of someone's soul. Your money matters, a lot. Depending on where you spend it. When you shop at a chain store, most of it leaves immediately. To corporate offices, shareholders, distant banks. But when you shop at a local business, your money stays right here. It pays bakers, cheese makers, cashiers, helps entrepreneurs cover their rent. Keeps our town's businesses open. That money circulates from hand to hand, strengthening the entire community.",
                 allCategories: "All Categories",
@@ -179,7 +179,7 @@
                 vendor: "vendor"
             },
             es: {
-                title: "Vendedores del Castillo",
+                title: "Elaborado en El Castillo",
                 subtitleTitle: "¿A dónde va tu dinero?",
                 subtitleText: "El Castillo fue construido por los manos que viven y sueñan aquí. Cada negocio local es un pedazo del alma de alguien. Tu dinero importa, y mucho. Dependiendo de dónde lo gastes. Cuando compras en una cadena, la mayor parte se va inmediato. A oficinas corporativas, accionistas, a bancos lejanos. Pero cuando compras en un negocio local, su dinero se queda aquí mismo. Paga al cajero de la panadería, ayuda a los emprendedores a cubrir la renta, mantiene abierto los negocios del pueblo. Ese dinero circula de mano en mano fortaleciendo a toda la comunidad.",
                 allCategories: "Todas las Categorías",
@@ -420,4 +420,5 @@
     </script>
 </body>
 </html>
+
 
