--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
                 subcategory: { en: "Beverages", es: "Bebidas" },
-                product: { en: "Local Wine Chicha", es: "Chicha" },
+                product: { en: "Fermented beverages", es: "Refrescos fermentados" },
                 name: "Tomas",
                 phone: "+506 8533 7902"
             },
@@ -420,5 +420,6 @@
     </script>
 </body>
 </html>
+
 
 
