--- a/index.html
+++ b/index.html
@@ -192,21 +192,21 @@
         const vendors = [
             {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
-                subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
+                subcategory: { en: "Diary & eggs", es: "Lácteos y huevos" },
                 product: { en: "Milk", es: "Leche" },
                 name: "Reina",
-                phone: "+506 8365 2239"
+                phone: "+506 8326 1696"
             },
             {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
-                subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
+                subcategory: { en: "Diary & eggs", es: "Lácteos y huevos" },
                 product: { en: "Cheese", es: "Queso" },
                 name: "Reina",
-                phone: "+506 8365 2239"
+                phone: "+506 8326 1696"
             },
             {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
-                subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
+                subcategory: { en: "Diary & eggs", es: "Lácteos y huevos" },
                 product: { en: "Yoghurt", es: "Yogurt" },
                 name: "Anna",
                 phone: "+506 8728 6113"
@@ -227,14 +227,14 @@
             },
             {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
-                subcategory: { en: "Meat & Poultry", es: "Carnes y Aves" },
+                subcategory: { en: "Meat & poultry", es: "Carnes y aves" },
                 product: { en: "Chicken & Chicken dinners", es: "Pollo y Cena con pollo" },
                 name: "Ana",
                 phone: "+506 8862 4019"
             },
             {
                 category: { en: "Food & Beverages", es: "Comida y Bebidas" },
-                subcategory: { en: "Diary & Eggs", es: "Lácteos y Huevos" },
+                subcategory: { en: "Diary & eggs", es: "Lácteos y huevos" },
                 product: { en: "Eggs", es: "Huevos" },
                 name: "Lena",
                 phone: "+506 8326 1696"
@@ -253,6 +253,13 @@
                 name: "Michael",
                 phone: "+506 8709 0777"
             },
+             {
+                category: { en: "Food & Beverages", es: "Comida y Bebidas" },
+                subcategory: { en: "Preserved & Prepared foods", es: "Alimentos Preservados y Preparados" },
+                product: { en: "Spicy sauces", es: "Salsas picantes" },
+                name: "Viktor",
+                phone: "+49 1578 5593672"
+            },
             {
                 category: { en: "Personal care", es: "Cuidado personal" },
                 subcategory: { en: "Hygiene", es: "Higiene" },
@@ -262,7 +269,7 @@
             },
             {
                 category: { en: "Personal care", es: "Cuidado personal" },
-                subcategory: { en: "Natural remedies", es: "Remedios Naturales" },
+                subcategory: { en: "Natural remedies", es: "Remedios naturales" },
                 product: { en: "Insect repellent", es: "Repelentes naturales" },
                 name: "Lena",
                 phone: "+506 8326 1696"
@@ -298,9 +305,16 @@
             {
                 category: { en: "Services", es: "Servicios" },
                 subcategory: { en: "Cleaning", es: "Limpieza" },
-                product: { en: "Washing of Vehicles", es: "Lavado de vehículos" },
+                product: { en: "Washing of vehicles", es: "Lavado de vehículos" },
                 name: "Josuè",
                 phone: "+506 8646 2590"
+            },
+            {
+                category: { en: "Services", es: "Servicios" },
+                subcategory: { en: "Personal services", es: "Servicios personales" },
+                product: { en: "Yoga & Meditation", es: "Yoga y Meditación" },
+                name: "Kay",
+                phone: "+506 8515 1301"
             },
             {
                 category: { en: "Handmade crafts", es: "Artesanías" },
@@ -420,6 +434,3 @@
     </script>
 </body>
 </html>
-
-
-
