--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 vendors: "vendors",
                 vendor: "vendor",
                 disclaimerTitle: "Disclaimer:",
-                disclaimerText: "This directory is provided as a community resource to connect residents with local micro-enterprises. We do not verify business licenses, permits, or legal compliance—that is the sole responsibility of each vendor. By using this directory, you acknowledge that all transactions are between you and the vendor directly. This platform is intended for small-scale local businesses and does not include tours, experiences, or services that are widely available (such as taxi services). We are not responsible for the quality, legality, or outcomes of any products or services offered by listed vendors."
+                disclaimerText: "This directory is provided as a community resource to connect residents with local micro-enterprises. We do not verify business licenses, permits, or legal compliance—that is the sole responsibility of each vendor. By using this directory, you acknowledge that all transactions are between you and the vendor directly. This platform is intended for small-scale local businesses and does not include tours, experiences, or services that are widely available. We are not responsible for the quality, legality, or outcomes of any products or services offered by listed vendors."
             },
             es: {
                 title: "Elaborado en El Castillo",
@@ -211,7 +211,7 @@
                 vendors: "vendedores",
                 vendor: "vendedor",
                 disclaimerTitle: "Descargo de responsabilidad:",
-                disclaimerText: "Este directorio se proporciona como un recurso comunitario para conectar a los residentes con micro-empresas locales. No verificamos licencias comerciales, permisos o cumplimiento legal—esa es la responsabilidad exclusiva de cada vendedor. Al usar este directorio, usted reconoce que todas las transacciones son entre usted y el vendedor directamente. Esta plataforma está destinada a pequeños negocios locales y no incluye tours, experiencias o servicios que están ampliamente disponibles (como servicios de taxi). No somos responsables de la calidad, legalidad o resultados de cualquier producto o servicio ofrecido por los vendedores listados."
+                disclaimerText: "Este directorio se proporciona como un recurso comunitario para conectar a los residentes con micro-empresas locales. No verificamos licencias comerciales, permisos o cumplimiento legal—esa es la responsabilidad exclusiva de cada vendedor. Al usar este directorio, usted reconoce que todas las transacciones son entre usted y el vendedor directamente. Esta plataforma está destinada a pequeños negocios locales y no incluye tours, experiencias o servicios que están ampliamente disponibles. No somos responsables de la calidad, legalidad o resultados de cualquier producto o servicio ofrecido por los vendedores listados."
             }
         };
 
@@ -465,3 +465,4 @@
     </script>
 </body>
 </html>
+
